# ACS-project-Wormhole

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  decision_forest.cpp  decision_tree.cpp  decision_tree_stolen.cpp  expected_classes.csv  iris_test.csv  iris_train.csv  iris_train2.csv  main.cpp  output_py.csv  requirements.txt  result.csv  test.csv  train.csv  tree.json  tree.py
data/: iris_test.csv
decision_tree_WH/: CMakeLists.txt
decision_tree_WH/add_2_integers_in_compute/: add_2_integers_in_compute.cpp
decision_tree_WH/forest/: CMakeLists.txt  forest.cpp
decision_tree_WH/forest/include/: decision_forest.h  decision_tree_final.h
decision_tree_WH/forest/kernels/compute/: forest_compute.cpp
decision_tree_WH/forest/kernels/dataflow/: forest_reader.cpp  forest_writer.cpp
decision_tree_WH/forest/src/: decision_forest.cpp  decision_tree_final.cpp
include/: decision_forest.h  decision_tree.h  decision_tree_final.h  decision_tree_op1.h  decision_tree_op2.h  decision_tree_op3.h  decision_tree_op4.h  decision_tree_op5.h  decision_tree_op6.h  node.h  thread_pool.h
myenv/: pyvenv.cfg
src/: benchmark.cpp  decision_forest.cpp  decision_forest_tp.cpp  decision_tree.cpp  main.cpp  node.cpp  plot_result.cpp  test_forest.cpp  test_tree.cpp  thread_pool.cpp
src/modified/: decision_tree_final.cpp  decision_tree_op1.cpp  decision_tree_op2.cpp  decision_tree_op3.cpp  decision_tree_op4.cpp  decision_tree_op5.cpp  decision_tree_op6.cpp
utils/: forest.py  plot_benchmarks.py  tree.py
